<resources>
    <string name="app_name">Uber</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="trip_time">
        "00:00:00 \n
        trip time"
    </string>
    <string name="trip_time_label">Trip Time</string>
    <string name="rs_label">RS</string>
    <string name="waiting_time_label">Waiting Time</string>
    <string name="distance_km_label">KM</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">Trips History</string>
    <string name="menu_m_notify">Available Packages</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_payment_history">Payment History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">GoogleMaps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online_driver">Online</string>
    <string name="need_location">Enable GPS SERVICE</string>
    <string name="location_content">This app wants to change your device settings use GPS,Wi-Fi and cell networks for your location</string>
    <string name="offline">Offline</string>
    <string name="default_notification_channel_id">Taxi Notification</string>
    <string name="msg_token_fmt">FCM Token</string>
    <string name="Notification">Hoorayy!!</string>
    <string name="title">New Ride Available!!!</string>
    <string name="content_description_media">NexRide</string>
    <string name="secondary_text"><![CDATA[Hurry up & take it]]></string>
    <string name="supporting_text">If you want it click accept or otherwise clisck reject ASAP</string>
    <string name="action_1">Accept</string>
    <string name="action_2">Reject</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="ok">Ok</string>
    <string name="title_activity_notification_cancel">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="oops">Oops!!</string>
    <string name="this_ride_has_been_cancelled">This ride has been cancelled!!</string>
    <string name="better_luck_next_time">Better luck next time</string>
    <string name="appName">NexRide </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="driver_id_18">Driver Id - 18</string>
    <string name="start_trip">Start Trip</string>
    <string name="customer_email">Enter Customer Email</string>
    <string name="customer_mobile_no">Enter Customer Mobile No</string>
    <string name="start_package">Start package</string>
    <string name="rides">Package Rides</string>
    <string name="failed_trips_history">Failed Trips history</string>
    <string name="failed_trip_history">Failed Trip History</string>
    <string name="commission_for_trips_details">Commission for trips Details</string>

</resources>
