<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/rounded_corners"
    tools:context="com.nexeyotest.respectcab.NotificationActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/textView12"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/Notification"-->
    <!--        tools:layout_editor_absoluteX="175dp"-->
    <!--        tools:layout_editor_absoluteY="193dp"-->
    <!--        tools:ignore="MissingConstraints" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        tools:ignore="MissingConstraints">

        <!-- Media -->
        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text=""
            android:layout_centerHorizontal="true"
            tools:ignore="MissingConstraints" />
        <ImageView

            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/oopss"
            android:scaleType="fitCenter"
            android:contentDescription="@string/content_description_media"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:text="@string/oops"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/this_ride_has_been_cancelled"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/better_luck_next_time"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>



            <Button
                android:id="@+id/accept"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/ok"
                android:background="@drawable/no_stroke"
                tools:ignore="MissingConstraints,OnClick"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_gravity="center_horizontal|bottom"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


