<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nexeyotest.respectcab.DriverLoginActivity"
    android:orientation="vertical"
    android:background="#F2C306"
    >

    <ImageView
        android:id="@+id/logoMain"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_above="@id/AppName"
        android:layout_alignTop="@+id/email"
        android:layout_gravity="center"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/content_description_media"
        android:scaleType="fitCenter"

        app:srcCompat="@drawable/taxilogo"
        tools:ignore="VectorDrawableCompat" />
    <TextView
        android:id="@+id/AppName"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_110sdp"
        android:layout_centerInParent="true"
        android:layout_above="@id/search_field"
        android:textSize="@dimen/_30sdp"
        android:text="@string/appName"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        />
    <EditText
        android:id="@+id/search_field"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_above="@id/driver_full_name"

        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text"
        android:layout_centerInParent="true"
        android:padding="10dip"/>
<!--        android:drawableLeft="@drawable/mobile_icon"-->
<!--        android:drawableTint="#030303"-->

        />

<!--    <ImageView-->
<!--        android:id="@+id/username_icon"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="#030303"-->
<!--        android:padding="3dp"-->
<!--        android:src="@drawable/common_full_open_on_phone" />-->

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="29dp"
        android:hint="email"/>

    <EditText
        android:id="@+id/driver_id_login"
        android:layout_width="197dp"
        android:layout_height="68dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="403dp"
        android:layout_marginLeft="403dp"
        android:layout_marginTop="10dp"
        android:hint="Driver Id" />


    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@id/driver_name"
        android:padding="10dip"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginTop="45dp"
        android:hint="@string/enter_your_password"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:background="@drawable/edit_text"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-12dp"
        android:layout_marginLeft="-12dp"
        android:layout_marginTop="17dp"
        android:text="REGISTRATION"

        android:visibility="invisible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="601dp"
        android:layout_height="2dp"
        android:layout_below="@+id/search_field"


        >

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"

        android:layout_centerInParent="true"

        android:background="@drawable/no_stroke"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_45sdp"
        android:text="Login" />

    <Button
        android:id="@+id/bck_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_corners"
        android:layout_centerInParent="true"
        android:text="Back"
        android:textColor="#030303" />

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="50dp"
        android:layout_above="@id/bck_btn"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/no_stroke"
        android:text="Done!"
        android:textColor="#030303"
        android:layout_centerInParent="true"
        app:cornerRadius="1000dp" />

    <EditText
        android:id="@+id/driver_name"
        android:layout_width="wrap_content"
        android:layout_height="63dp"

android:layout_above="@id/login"
        android:layout_marginTop="2dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/driver_mobile_no"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/result_list"

        android:layout_marginTop="2dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"

        android:text="Name"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/driver_full_name"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_above="@id/login"

        android:layout_marginTop="2dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="" />

</RelativeLayout>